--- a/src/components/CreditCard/CreditCard.scss
+++ b/src/components/CreditCard/CreditCard.scss
@@ -1,11 +1,10 @@
 .creditCard {
-  padding: 25px;
-  width: 300px;
-  height: 150px;
+  padding: 20px;
+  width: 325px;
   border-radius: 15px;
   background: linear-gradient(150deg, #8e1010, #d42e2e);
   display: flex;
-  gap: 23px;
+  gap: 10px;
   flex-direction: column;
 }
 
@@ -31,6 +30,7 @@
 .card-details {
   display: flex;
   justify-content: space-between;
+  margin-top: 8px;
 }
 
 .card-holder {
