--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,9 @@
 .container {
   display: flex;
   justify-content: space-around;
+  flex-direction: column;
+  gap: 8px;
+  margin-left: 20px;
 }
 
 .currentBalance {
@@ -28,7 +31,7 @@
 .balance {
   color: rgb(33, 193, 177);
   font-weight: bold;
-  font-size: 20px;
+  font-size: 18px;
 }
 
 .money-management-container {
