--- a/src/modals/SendMoneyModal/SendMoneyModal.scss
+++ b/src/modals/SendMoneyModal/SendMoneyModal.scss
@@ -1,5 +1,49 @@
 .send-modal {
-  width: 100px;
+  width: 400px;
   height: auto;
   color: black;
+  border-radius: 8px;
+  padding: 8px;
+  gap: 10px;
+}
+
+.send-money-title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-weight: bold;
+}
+
+.cancel-icon {
+  cursor: pointer;
+}
+
+.buttons {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+
+.back-button {
+  padding: 8px;
+  width: 100%;
+  border-color: black;
+  border-radius: 8px;
+  border-style: solid;
+  font-size: 13px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.send-button {
+  padding: 8px;
+  width: 100%;
+  border-radius: 8px;
+  background: rgb(218, 18, 18);
+  font-size: 13px;
+  font-weight: bold;
+  text-align: center;
+  color: white;
+  cursor: pointer;
 }
