--- a/src/modals/SendMoneyModal/SendMoneyModal.scss
+++ b/src/modals/SendMoneyModal/SendMoneyModal.scss
@@ -3,8 +3,8 @@
   height: auto;
   color: black;
   border-radius: 8px;
-  padding: 8px;
-  gap: 10px;
+  padding: 15px;
+  gap: 20px;
 }
 
 .send-money-title {
@@ -12,6 +12,32 @@
   justify-content: space-between;
   align-items: center;
   font-weight: bold;
+}
+
+.amount-title {
+  font-size: 14px;
+}
+
+.amount {
+  padding: 8px;
+  width: 100%;
+  border-color: lightgrey;
+  border-radius: 5px;
+  border-style: solid;
+}
+
+.receipient {
+  padding: 8px;
+  width: 100%;
+  border-color: lightgrey;
+  border-radius: 5px;
+  border-style: solid;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 .cancel-icon {
@@ -23,17 +49,6 @@
   flex-direction: column;
   align-items: center;
   gap: 10px;
-}
-
-.back-button {
-  padding: 8px;
-  width: 100%;
-  border-color: black;
-  border-radius: 8px;
-  border-style: solid;
-  font-size: 13px;
-  font-weight: bold;
-  text-align: center;
 }
 
 .send-button {
