--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 #root {
-  padding: 10px;
   width: 100%;
   margin: 0 auto;
   color: black;
@@ -20,6 +19,7 @@
   display: flex;
   justify-content: space-around;
   flex-direction: column;
+  align-items: center;
   gap: 8px;
   margin-left: 20px;
 }
